Feat: working codebase