@@ -4,6 +4,20 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <artifactId>AuditProcessor</artifactId>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens java.base/java.lang.invoke=ALL-UNNAMED</argLine>
+        </configuration>
+        <groupId>org.apache.maven.plugins
+        </groupId> <!-- Ensure you're using an up-to-date version -->
+        <version>3.1.2</version>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <dependency>
       <artifactId>lombok</artifactId>
@@ -48,6 +62,7 @@
     </dependency>
 
 
+    <!-- adding -add-opens java.base/java.lang.invoke=ALL-UNNAMED to allow Feign to access the restricted MethodHandles.Lookup class.-->
     <dependency>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
       <groupId>org.springframework.cloud</groupId>
